--- a/requirements.txt
+++ b/requirements.txt
@@ -1,39 +1,17 @@
-autopep8==1.5.7
-cachetools==4.2.2
-certifi==2021.5.30
-charset-normalizer==2.0.4
-click==8.0.1
-colorama==0.4.4
-dj-database-url==0.5.0
+asgiref==3.4.1
+certifi==2021.10.8
+charset-normalizer==2.0.7
+defusedxml==0.7.1
+Django==3.2.9
+django-allauth==0.41.0
 django-crispy-forms==1.13.0
-Flask==2.0.1
-google-auth==1.34.0
-google-auth-oauthlib==0.4.5
-gspread==4.0.1
-idna==3.2
-itsdangerous==2.0.1
-Jinja2==3.0.1
-keyboard==0.13.5
-MarkupSafe==2.0.1
-MouseInfo==0.1.3
-mysql-connector-python==8.0.26
+idna==3.3
 oauthlib==3.1.1
-Pillow==8.3.1
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-PyAutoGUI==0.9.53
-pycodestyle==2.7.0
-PyGetWindow==0.0.9
-pymongo==3.12.0
-PyMsgBox==1.0.9
-pyperclip==1.8.2
-PyRect==0.1.4
-PyScreeze==0.1.27
-PyTweening==1.0.3
+Pillow==8.4.0
+python3-openid==3.2.0
+pytz==2021.3
 requests==2.26.0
 requests-oauthlib==1.3.0
-rsa==4.7.2
-six==1.16.0
-toml==0.10.2
-urllib3==1.26.6
-Werkzeug==2.0.1
+sqlparse==0.4.2
+urllib3==1.26.7
+yapf==0.31.0
